Button bug fixed

--- a/assets/translations/ky.json
+++ b/assets/translations/ky.json
@@ -16,6 +16,13 @@
   "drawer_reload": "Жаңылоо",
   "drawer_language": "Тил",
   "whatsapp_error": "WhatsApp ачылган жок",
+  "whatsapp_unavailable_title": "WhatsApp жеткиликтүү эмес",
+  "whatsapp_unavailable_body": "Көрүнүшү боюнча, бул түзмөктө WhatsApp орнотулган эмес. Төмөнкү варианттардан тандаңыз:",
+  "open_app_store": "App Store ачуу",
+  "open_play_market": "Play Market ачуу",
+  "open_in_browser": "Браузерде ачуу",
+  "copy_number": "Номерди көчүрүү",
+  "number_copied": "Номер көчүрүлдү",
   "share_text": "Ноокаттагы жарнамалар колдонмосу: https://aimak996.kg",
   "error_loading_categories": "Категорияларды жүктөөдө ката",
   "retry": "Кайталоо",
