--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -18,6 +18,13 @@
   "drawer_language": "Язык",
   "drawer_subtitle": "Мобильное приложение для покупок и продаж в Ноокатском районе",
   "whatsapp_error": "Не удалось открыть WhatsApp",
+  "whatsapp_unavailable_title": "WhatsApp недоступен",
+  "whatsapp_unavailable_body": "Похоже, WhatsApp не установлен на устройстве. Выберите, как поступить:",
+  "open_app_store": "Открыть в App Store",
+  "open_play_market": "Открыть в Play Market",
+  "open_in_browser": "Открыть в браузере",
+  "copy_number": "Скопировать номер",
+  "number_copied": "Номер скопирован",
   "share_text": "Скачивай приложение для объявлений в Ноокате: https://aimak996.kg",
   "error_loading_categories": "Ошибка загрузки категорий",
   "retry": "Повторить",
